--- a/src/ap_core.qsf
+++ b/src/ap_core.qsf
@@ -42,7 +42,7 @@
 # ========================
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.1.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "21:31:36  JANUARY 22, 2020"
-set_global_assignment -name LAST_QUARTUS_VERSION "23.1std.1 Lite Edition"
+set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Standard Edition"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name PRE_FLOW_SCRIPT_FILE "quartus_sh:apf/build_id_gen.tcl"
 set_global_assignment -name SMART_RECOMPILE ON
@@ -744,6 +744,7 @@ set_global_assignment -name NUM_PARALLEL_PROCESSORS ALL
 set_global_assignment -name ALM_REGISTER_PACKING_EFFORT MEDIUM
 set_global_assignment -name FINAL_PLACEMENT_OPTIMIZATION NEVER
 
+set_global_assignment -name QIP_FILE analogizer/analogizer.qip
 set_global_assignment -name SYSTEMVERILOG_FILE gb/save_state_controller.sv
 set_global_assignment -name SYSTEMVERILOG_FILE gb/rtc_loader.sv
 set_global_assignment -name SYSTEMVERILOG_FILE gb/rumbler.sv
